--- a/gestorEconomico/res/layout/activity_gastos_diarios.xml
+++ b/gestorEconomico/res/layout/activity_gastos_diarios.xml
@@ -45,7 +45,7 @@
                 android:text="Seleccione nombre" />
 
             <Spinner
-                android:id="@+id/spr_nombre"
+                android:id="@+id/spr_monedas"
                 android:layout_width="145dp"
                 android:layout_height="wrap_content" />
 
